--- a/app/index.html
+++ b/app/index.html
@@ -144,7 +144,7 @@
                 <div>
                     <span><i class="fa-solid fa-location-dot fa-clr"></i></span>
                     <p data-aos="zoom-out-right">
-                        Shop 3, Elite Downtown bldg <br>
+                        Elite Downtown bldg <br>
                         Burj Khalifa Street, Dubai UAE
                     </p>
                 </div>
